[package]
name = "everypin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
shuttle-serenity = "0.30.1"
shuttle-runtime = "0.30.1"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.30.1"
tokio = "1.33.0"
tracing = "0.1.40"
